Ready to submit!

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Udacious Travelers</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jQuery.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:900' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:900" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id = "main">
