--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Udacious Travelers</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/jQuery.js"></script>
+    <meta name="viewport" content="width-device-width, initial-scale-1">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:900" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -22,6 +22,7 @@
 			<p>Thanks for playing, and have fun!</p>
 		</div>
 	</div>
+    <script src="js/jQuery.js"></script>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
